--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,5 @@
 service: polyfill
+frameworkVersion: ">=1.34.0 <2.0.0"
 
 plugins:
   - serverless-offline
@@ -6,7 +7,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs8.10
-  stage: production
+  stage: ${opt:stage, 'dev'}
   region: us-west-2
 
 package:
