Forced the NODE_ENv variable to be production

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,6 +9,8 @@ provider:
   runtime: nodejs8.10
   stage: ${opt:stage, 'dev'}
   region: us-west-2
+  environment:
+    NODE_ENV: production
 
 package:
   exclude:
